--- a/Responsive Landing Page/styles.css
+++ b/Responsive Landing Page/styles.css
@@ -163,7 +163,7 @@ body, ul {
 }
 
 footer {
-  background-color:#7e56ca;
+  background-color:#000000;
   color: #fff;
   padding: 40px 0;
   border-top-right-radius: 40px;
